Initial Java 11 support. * Upgraded a lot of dependencies. * Uses Java 11 Base64
What works:
* Reststop api, core, plugins, maven-plugin compiles

Not working:
* Import of @Export parameters between plugins
* Checking of ErrorType for @Config parameters not working, need to find a better solution.